comments-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments
  template:
    metadata:
      labels:
        app: comments
    spec:
      containers:
        - image: baraba123/rso-comments:1.0.0-SNAPSHOT-5.1
          name: comments
          ports:
            - containerPort: 8080
              name: server
              protocol: TCP
---

apiVersion: v1
kind: Service
metadata:
  name: comments
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      protocol: TCP
      targetPort: server
  selector:
    app: comments
