recomender-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recomender-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recomender
  template:
    metadata:
      labels:
        app: recomender
    spec:
      containers:
        - image: baraba123/rso-recomender:1.0.0-SNAPSHOT-8.1
          name: recomender
          ports:
            - containerPort: 8081
              name: server
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health
              port: server
            initialDelaySeconds: 20
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /health
              port: server
            initialDelaySeconds: 20
            periodSeconds: 3
---

apiVersion: v1
kind: Service
metadata:
  name: recomender
spec:
  type: ClusterIP
  ports:
    - port: 8081
      protocol: TCP
      targetPort: server
  selector:
    app: recomender
