ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: proxy-ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /recomender(/|$)(.*)
            backend:
              serviceName: recomender
              servicePort: 8081
          - path: /image-catalog(/|$)(.*)
            backend:
              serviceName: image-catalog
              servicePort: 8080
